# termy

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pr-quality.yaml  release-macos.yml  release.yml
Casks/: termy.rb
assets/: termy.icns
crates/auto_update/: Cargo.toml
crates/auto_update/src/: github.rs  lib.rs
crates/auto_update_ui/: Cargo.toml
crates/auto_update_ui/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: edit_config.rs  list_actions.rs  list_colors.rs  list_fonts.rs  list_keybinds.rs  list_themes.rs  mod.rs  prettify_config.rs  show_config.rs  tui.rs  update.rs  validate_config.rs  version.rs
crates/native_sdk/: Cargo.toml
crates/native_sdk/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: engine.rs  lib.rs  matcher.rs  state.rs
crates/terminal_ui/: Cargo.toml
crates/terminal_ui/src/: grid.rs  lib.rs  links.rs  runtime.rs
crates/themes/: Cargo.toml
crates/themes/src/: dracula.rs  gruvbox_dark.rs  lib.rs  monokai.rs  nord.rs  one_dark.rs  palenight.rs  solarized_dark.rs  termy.rs  tokyo_night.rs
crates/toast_sdk/: Cargo.toml
crates/toast_sdk/src/: lib.rs
docs/: configuration.md  keybindings.md
installer/: termy.iss
packaging/linux/: PKGBUILD
scripts/: build-dmg-signed.sh  build-dmg.sh  build-linux.sh  build-setup.ps1  install-linux.sh
site/: index.html
src/: colors.rs  commands.rs  config.rs  main.rs  settings_view.rs  terminal.rs  terminal_grid.rs  terminal_view.rs  text_input.rs
src/keybindings/: actions.rs  config.rs  defaults.rs  mod.rs
src/terminal_view/: command_palette.rs  inline_input.rs  interaction.rs  mod.rs  render.rs  scrollbar.rs  search.rs  tab_chrome.rs  tabs.rs  titles.rs  update_toasts.rs
src/themes/: catppuccin_mocha.rs  dracula.rs  gruvbox_dark.rs  material_dark.rs  mod.rs  monokai.rs  nord.rs  oceanic_next.rs  one_dark.rs  palenight.rs  solarized_dark.rs  tokyo_night.rs  tomorrow_night.rs
src/ui/: scrollbar.rs
themes/: clean-dark.json  shadcn-dark.json  tokyo-night-dark.json  tokyo-night-light.json
