[package]
name = "auto_update"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui       = { git = "https://github.com/zed-industries/zed", package = "gpui" }
ureq       = { version = "2", features = ["json"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
semver     = "1"
anyhow     = "1"
log        = "0.4"
flume      = "0.11"
